changed minimized fluid

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1>Learn from an <span class="standout2">accomplished</span> Surf Instructor with over <span class="standout2"> 20 years experience!</span></h1>
     </div>
 <div id="site_marketing2">
-      <h1>Individual focus, attention, & highly <span class="standout2">personable surf lessons</span></h1>
+      <h1><span class="standout2">Individual</span> focus, attention, & highly personable surf lessons</h1>
     </div>
 <div id="site_marketing">
       <h1><span class="standout2">1 on 1 </span> Individual Attention</h1>
@@ -154,5 +154,5 @@
     </div> <!-- end of templatemo_copyright -->
 </div> <!-- end of copyright wrapper -->
 
-<div align=center>This template  downloaded form <a href='http://all-free-download.com/free-website-templates/'>free website templates</a></div></div></body>
+<div align=center>This template  downloaded form <a href='http://all-free-download.com/free-website-templates/'>free website templates</a></div></body>
 </html>
