--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="services.html">About</a></li>
             <li><a href="news.html">Lessons</a></li>
             <li><a href="gallery.html">Pricing</a></li>
-<li><a href="gallery.html">Photos</a></li>
+<li><a href="images.html">Photos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>    	
     
