--- a/news.html
+++ b/news.html
@@ -67,7 +67,7 @@
           </div>
                 
             <div class="two_column float_r">
-            
+            <h3 class="righttitle2">Why Choose Us?</h3>
                 <ul>
                     <li>Cum sociis natoque penatibus et magnis dis parturient montes</li>
                     <li> Cum sociis natoque penatibus et magnis dis parturient montes</li>
