before home page redesign

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <h1>Santa Barbara's <span id="standout">Premier</span> Surf Lessons</h1>
     </div>
 <div class="site_marketing_first">
-      <h1>Learn from an <span class="standout2">accomplished</span> surf instructor with over <span class="standout2"> 20 years experience!</span></h1>
+      <h1>Learn from an <span class="standout2">accomplished&nbsp;</span> surf instructor with over <span class="standout2"> 20 years experience!</span></h1>
     </div>
 <div id="site_marketing2">
-      <h1>Surf lessons with <span class="standout2">individual</span> focus & attention </h1>
+      <h1>Surf lessons with <span class="standout2">individual&nbsp;</span> focus & attention </h1>
     </div>
 <div id="site_marketing">
-      <h1><span class="standout2">1 on 1 </span> individual attention</h1>
+      <h1><span class="standout2">1 on 1 </span> &nbsp;soulful instruction</h1>
     </div>
 <div id="site_marketing3">
       <h1>Learn More :)</h1>
@@ -65,13 +65,13 @@
 <div id="templatemo_top_row_wrapper">
 	<div id="templatemo_top_row">
     <div class="top_row_box"><img src="/images/ps.jpg" alt="Pike Surf School" id="pikesurfimage1" >
-        	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Learn</span> the Soulful Surfing Way.</h5>
+        	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Experience</span> the Soulful Surfing Way.</h5>
             <p><span class="bluep">Learn firsthand what it truly means to be a surfer: </span> Learning to surf is so much more than just learning to stand up or paddle (we teach that too), but also appreciating what it truly takes be a surfer.  </p>
             <div ><a class="button" href="#">Find Out More!</a></div></div>
         </div>
 
 <div class="top_row_box"><img src="/images/ch1.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
-        	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Enjoy</span> with the Family & Kids!</h5>
+        	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Learn</span> with the Family & Kids!</h5>
             <p><span class="bluep">Perfect for kids (age 10 and younger) and youth</span> (ages 15 and under) and teens who are eager to jump into the sport of surfing. We offer you the most pleasant learning experience </p>
             <div><a class="button" href="#">Find Out More!</a></div></div>
         
