--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
 </div> 
 
 
-<div id="templatemo_content_wrapper2">
+<div id="templatemo_content_wrapper2"><img src="/images/lp.jpg" alt="logo"  id="about_background"/>
 	<div id="templatemo_content">
     	
          <h1 class="marketing_header">About Pike Surf School</h1>
