--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
 
 <div id="templatemo_content_wrapper">
-	<div id="templatemo_content">
+	<div id="templatemo_content7">
     	
          <h1>Questions? Want more Information?</h1>
 			<div class="two_column float_l">
