--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 
 
 <div id="templatemo_content_wrapper2">
-	<div id="templatemo_content">
+	<div id="templatemo_content7">
     	
          <h1 class="marketing_header">Who We Are</h1>
          <p>Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow">XHTML</a> &amp; <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow">CSS</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et nunc commodo ante   ornare imperdiet. Donec nunc neque, pulvinar a, vestibulum eget, luctus   id, orci. Pellentesque elementum enim a augue. Donec in nisi. Etiam sit   amet turpis. Duis nulla diam, posuere ac, varius id, ullamcorper sit   amet, libero. Nam sodales, pede vel dapibus lobortis, ipsum diam molestie risus, a vulputate risus nisl pulvinar lacus.</p>
