--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
 
 
 <div id="templatemo_content_wrapper2">
-	<div id="templatemo_content">
+	<div id="templatemo_content7">
     	<h3 id="righttitle">Why Choose Us?</h3>
 
 <div class="two_column float_l">
