--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div> <!-- end of content_wrapper -->
 <div id="templatemo_content8">
 <div id="welcome">
-<h1 class="marketing_header">Our Mission </h1>
+<h1 class="marketing_header">The Mission </h1>
         
       <p class="description"><span class="turqp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn about surfing,</span> not just how to learn how to ride a wave or paddle (we teach that too :) but learn about what it truly means to be a surfer, from the ground up, like I did in my 20 years living in Sata Barbara. I've given lessons to everyone from children, teens, and adults, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teen ne thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teenne thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teen</p>
 </div>
