--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
         </div>
 <div class="top_row_box last"><img src="/images/couples.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
-        	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Explore</span> together in Groups!</h5>
+        	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Enjoy</span> together in Groups!</h5>
           <p><span class="bluep">Looking to go on a surf learning adventure with a group?</span> Enjoy your surf lesson together. with true locals. Find out what's happening in this beautiful town.  </p>
             <div><a class="button" href="#">Find Out More!</a></div>
 	  </div>
