--- a/news.html
+++ b/news.html
@@ -56,14 +56,15 @@
     	
 <div class="two_column float_l">
                 <iframe id="pikevim" src="//player.vimeo.com/video/83187924" width="550" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <p id="video_summary">Whether you are looking to stand up for your first time or looking to make your skills more well-rounded, urabitur ullamcorper neque et justo aliquet at pretium orci  scelerisque. Mauris sodales tristique dignissim. Phasellus ut augue  nibh. Aliquam vel libero sit amet mauris posuere ullamcorper  sollicitudin ac eros. Vestibulum auctor euismod mi et tincidunt. </p>
+        <p id="video_summary"><span class="greenp">Whether you are looking to stand up for your first time or just looking to fine-tune your skills and become more well-rounded,</span> urabitur ullamcorper neque et justo aliquet at pretium orci  scelerisque. Mauris sodales tristique dignissim. Phasellus ut augue  nibh. Aliquam vel libero sit amet mauris posuere ullamcorper  sollicitudin ac eros. Vestibulum auctor euismod mi et tincidunt. </p>
           </div>
     	
 <div id="righty">
-         <h1 class="marketing_header2">About Pike Surf School</h1>
-         <p><span class="turqp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn about surfing,</span> not just how to learn how to ride a wave or paddle (we teach that too :) but learn about what it truly means to be a surfer, from the ground up. I've given lessons to everyone from children, teens, and adults, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teen</p>
-<h1 class="marketing_header2">Meet The Instructor</h1>
-<p>Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow">XHTML</a> &amp; <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow">CSS</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et nunc commodo ante   ornare imperdiet. Donec nunc neque, pulvinar a, vestibulum eget, luctus   id, orci. Pellentesque elementum enim a augue. Donec in nisi. Etiam sit   amet turpis. Duis nulla diam, posuere ac, varius id, ullamcorper sit   amet, libero. Nam sodales, pede vel dapibus lobortis, ipsum diam molestie risus, a vulputate risus nisl pulvinar lacus.</p>
+         <h1 class="marketing_header9">Surf Lessons</h1>
+         <p><span class="lightp">James Pike has been surfing and teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf ‘n Skate goal is to be an asset to the world, so that anyone who lives in town or is pasting thru, has a wonderful surfing experience.  This is a sport for ages ( 4-77+ ).  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting with an expert.  Give the gift of surfing to yourself and your whole family, so everyone is involved and having fun!  Set up a surfing lesson today and learn how to surf with Pike!</p>
+<h1 class="marketing_header2">What's Included?</h1>
+<p><span class="lightp">Each private surfing lesson is 90 minutes and includes:</span> wetsuits, surfboards with surfing leash and 1 0n 1, personalized learning environment with surfing instructor James Pike.
+Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfschool.com).  Please include your full name and the height’s and weight’s for the people in the surf lesson, as well as a good time and date that works for you. Pike’s Surf School accepts for payment of Cash and Checks (Please write checks to “Pike’s Surf School”).</p>
 
 
     </div>
