--- a/images.html
+++ b/images.html
@@ -404,13 +404,12 @@
     	<div class="cleaner"></div>
 	</div> <!-- end of content -->
 </div> <!-- end of content_wrapper -->
+<div id="content_filler">
+<div id="surfrincon">
 
-<div id="templatemo_footer_wrapper">
-	<div id="templatemo_footer">
-    
-        <div class="cleaner"></div>
-    </div> <!-- end of footer -->
-</div> <!-- end of footer wrapper -->    
+</div>
+</div>
+ 
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing!
