--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
     <div class="top_row_box"><img src="/images/ps.jpg" alt="Pike Surf School" id="pikesurfimage1" >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Experience</span> the Soulful Surfing Way.</h5>
             <p><span class="bluep">Learn firsthand what it truly means to be a surfer: </span> We teach so much more than just how to stand up or or paddle paddle (we teach that too), but also appreciating what it truly takes be a surfer.  </p>
-            <div ><a class="button" href="#">Find Out More!</a></div></div>
+            <div ><a class="button" href=".services.html">Find Out More!</a></div></div>
         </div>
 
 <div class="top_row_box"><img src="/images/ch1.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Learn</span> with the Family & Kids!</h5>
             <p><span class="bluep">Perfect for kids (age 10 and younger) and youth</span> (ages 15 and under) and teens who are eager to jump into the sport of surfing. We offer you the most pleasant learning experience </p>
-            <div><a class="button" href="#">Find Out More!</a></div></div>
+            <div><a class="button" href="/services.html">Find Out More!</a></div></div>
         
         </div>
 <div class="top_row_box last"><img src="/images/couples.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Enjoy</span> together in Groups!</h5>
           <p><span class="bluep">Looking to go on a surf learning adventure with a group?</span> Enjoy your surf lesson together. with true locals. Find out what's happening in this beautiful town.  </p>
-            <div><a class="button" href="#">Find Out More!</a></div>
+            <div><a class="button" href="/services.html">Find Out More!</a></div>
 	  </div>
         </div>
     	
