--- a/services.html
+++ b/services.html
@@ -80,8 +80,8 @@
     	<div class="cleaner"></div>
 	</div> <!-- end of content -->
 </div> <!-- end of content_wrapper -->
-<div id="templatemo_content8">
-<div id="welcome">
+<div id="content_filler">
+<div id="surfrincon">
 
 </div>
 </div>
