--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
     	<div class="cleanme"></div>
 	</div> <!-- end of content -->
 </div> <!-- end of content_wrapper -->
-<div id="content_filler">
+<div id="content_filler66">
 <div id="surfrincon">
 
 </div>
