--- a/images.html
+++ b/images.html
@@ -59,20 +59,21 @@
 
 
 <div id="templatemo_content_wrapper"><img src="/images/cc.jpg" alt="logo"  id="about_background3"/>
-	<div id="templatemo_content">
-
+	<div id="templatemo_content69">
+ <h1 class="marketing_header9">Surf Photos</h1>
 <div id="imagegroup">
 		<div class="popup-gallery">
 	
 	<a href="images/neo1.jpg" title="Right after a great session!"><img src="images/neo1.jpg" class="popyimg"></a>
 
 	<a href="images/botp.jpg" title="Girls having a blast after surfing"><img src="images/botp.jpg" class="popyimg"></a>
-<a href="images/ks.jpg" title="Kelly Slater with a young surfing student"><img src="images/ks.jpg" class="popyimg"></a>
+<a href="images/zen.jpg" title="A young surfing stud in the making!"><img src="images/zen.jpg" class="popyimg"></a>
 
 
 
 <a href="images/24.jpg" title="New and born again surfers"><img src="images/24.jpg" class="popyimg"></a>
 <a href="images/gettinready.jpg" title="Nothing but smiles- Getting ready!"><img src="images/gettinready.jpg" class="popyimg"></a>
+<a href="images/ks.jpg" title="Kelly Slater with a young surfing student"><img src="images/ks.jpg" class="popyimg"></a>
 
 <a href="images/ps.jpg" title="Girls having a blast after surfing"><img src="images/ps.jpg" class="popyimg"></a>
 
@@ -101,11 +102,10 @@
 <a href="images/lukas.jpg" title="A young surf student, Lukas learning fast!"><img src="images/lukas.jpg" class="popyimg"></a>
 
 <a href="images/dashboard.jpg" title="Girls having a blast after surfing"><img src="images/dashboard.jpg" class="popyimg"></a>
-<a href="images/zen.jpg" title="Girls having a blast after surfing"><img src="images/zen.jpg" class="popyimg"></a>
+
 
 </div>
 </div>		
-
 
 
 
@@ -116,7 +116,7 @@
     	<div class="cleaner"></div>
 	</div> <!-- end of content -->
 </div> <!-- end of content_wrapper -->
-<div id="content_filler">
+<div id="content_filler7">
 <div id="surfrincon">
 
 </div>
