--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
       <p class="description"><span class="lightp">Our mission is to create a fun, safe, and enjoyable environment where anyone can learn to surf.</span> To me, learning how to surf is more than just learning how to ride a wave or how to paddle (we teach that too :) but learn about what it truly means to surf. Having grown up in the area, I've given lessons to everyone from children, teens, adults and Grandparents, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child</p>
 </div>
 <div id="welcomecenter2">
-<h1 class="marketing_header">The Story: </h1>
+<h1 class="marketing_header99">The Story: </h1>
         
       <p class="description"><span class="lightp">Pike’s Surf ‘n Skate goal is to be an asset to the world, so that anyone who lives in town or is pasting thru, has a wonderful surfing experience.</span> To me, learning how to surf is more than just learning how to ride a wave or how to paddle (we teach that too :) but learn about what it truly means to surf. Having grown up in the area, I've given lessons to everyone from children, teens, adults and Grandparents, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. </p>
 </div>
