testing browser compatibiity

--- a/images.html
+++ b/images.html
@@ -5,10 +5,10 @@
 <title>Pike Surf School</title>
 <meta name="keywords" content="Black Fox, Free CSS Template, full-site, 5 pages, HTML" />
 <meta name="description" content="Black Fox is a full-site 5 pages free CSS template from templatemo.com" />
+<meta name="viewport" content="width=1351">
 <!-- Magnific Popup core CSS file -->
+
 <link rel="stylesheet" href="css/magnific-popup.css"> 
-
-
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
