--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 <title>Pike Surf School</title>
 <meta name="keywords" content="Black Fox, Free CSS Template, full-site, 5 pages, HTML" />
 <meta name="description" content="Black Fox is a full-site 5 pages free CSS template from templatemo.com" />
+<meta name="viewport" content="width=1351">
 
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
