--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Pike Surf School</title>
-<meta name="keywords" content="Black Fox, Free CSS Template, full-site, 5 pages, HTML" />
-<meta name="description" content="Black Fox is a full-site 5 pages free CSS template from templatemo.com" />
+<meta charset="UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>  Welcome | Pike&#039;s Surf N&#039; Skate</title>
+<meta name="keywords" content="Santa Barbara Surf school, surf lessons santa barbara" />
+<meta name="description" content="Give the gift of surfing to yourself and your whole family, in a fun, safe, and beautiful environment!" />
 <meta name="viewport" content="width=1351">
-
+<link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
@@ -19,15 +20,15 @@
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
         <ul>
             <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="services.html">About</a></li>
-            <li><a href="news.html">Lessons</a></li><li><a href="images.html">Photos</a></li>
-            <li><a href="gallery.html">Pricing</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="lessons.html">Lessons</a></li><li><a href="gallery.html">Photos</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
 
             <li><a href="contact.html">Contact</a></li>
         </ul>    	
@@ -137,7 +138,7 @@
 </div> <!-- end of footer wrapper -->    
 
 <div id="templatemo_copyright_wrapper">
-	<div id="templatemo_copyright">Copyright © 2014 <a href="#">&nbsp;Pike Surf School&nbsp;</a> Enjoy Life. Learn to Surf!
+	<div id="templatemo_copyright">Copyright © 2014 <a href="#">&nbsp;Pike Surf School&nbsp;</a> Enjoy Life. Learn to Surf! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
 
         
     </div> <!-- end of templatemo_copyright -->
