--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<div id="templatemo_top_row">
     <div class="top_row_box"><img src="/images/ps.jpg" alt="Pike Surf School" id="pikesurfimage1" >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Experience</span> the Soulful Surfing Way.</h5>
-            <p><span class="bluep">Learn firsthand what it truly means to be a surfer: </span> We teach so much more than just how to stand up or or paddle paddle (we teach that too), but also appreciating what it truly takes be a surfer.  </p>
+            <p><span class="bluep">Learn firsthand what it truly means to be a surfer. </span> We teach so much more than just how to stand up or or paddle paddle (we teach that too), but also appreciating what it truly takes be a surfer.  </p>
             <div ><a class="button" href="/about.html">Find Out More!</a></div></div>
         </div>
 
@@ -119,7 +119,7 @@
 <div id="welcomecenter">
 <h1 class="marketing_header">The Mission: </h1>
         
-      <p class="description"><span class="lightp">Our mission is to create a fun, safe, and enjoyable environment where anyone can learn to surf.</span> To me, learning how to surf is more than just learning how to ride a wave or how to paddle (we teach that too :) but learn about what it truly means to surf. Having grown up in the area, I've given lessons to everyone from children, teens, adults and Grandparents, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child</p>
+      <p class="description"><span class="lightp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn how to surf,</span> in the most enjoybale way possible. To me, learning how to surf is more than just learning how to ride a wave or how to paddle (we teach that too :) but learn about what it truly means to surf. Having grown up in the area, I've given lessons to everyone from children, teens, adults and Grandparents, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child</p>
 </div>
 <div id="welcomecenter2">
 <h1 class="marketing_header99">The Story: </h1>
