paypal button added

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 
 
-<div class="wrapper"><a href="index.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
