--- a/lessons.html
+++ b/lessons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Lessons | Pike&#039;s Surf N&#039; Skate</title>
+<title>Lessons | Pike&#039;s Surf School</title>
 <meta name="keywords" content="Santa Barbara Surfing, learn to surf" />
 <meta name="description" content="James Pike has been teaching surfing lessons for over 12 years and is both CPR and First Aid Certified." />
 <meta name="viewport" content="width=1351">
@@ -15,7 +15,7 @@
 <body>
 
 
-<div class="wrapper"><a href="index.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
