--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
 <body>
 
 
-<div class="wrapper"><a href="index.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -56,7 +56,10 @@
 
     	
 <h1 class="marketing_header10">Lesson Info:</h1>
-         <p id="test1"><span class="lightp">James Pike has been surfing and teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf ‘n Skate goal is to be an asset to the world, so that anyone who lives in town or is pasting thru, has a wonderful surfing experience.  This is a sport for ages ( 4-77+ ).  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting with an expert.  Give the gift of surfing to yourself and your whole family, so everyone is involved and having fun!  Set up a surfing lesson today and learn how to surf with Pike!</p><h1 class="marketing_header22">Pricing/Packages:</h1>
+         <p id="test1"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span>  <br /> <br /><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take 101South then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
+
+<br /> <br /><span class="greenp"> Directions from Ventura:</span>If your coming for Ventura way, take the State Beach exit after you past Ventura, do not miss it. Drive 5 minutes north, you will past Solimar state beach and then look for the 300 yard gap in between the houses.  This is Mondos Cove and the meeting spot is the west end of the gap, please park safely on the right hand side of the highway next to the railroad tracks.
+<br /> <br /><span class="greenp">Things to bring:</span> Wear your bathing suit under your clothes before you get to the beach and bring a towel, sun glasses, hat and sunblock (recommended Badger surf screen, can be brought at Whole Foods).  Please call or email the night before your lesson to confirm.  When it’s time to meet up at Mondo’s Cove and you are at the meeting spot, please give us a call to help you find your surf lesson quickly.</p><h1 class="marketing_header22">Pricing/Packages:</h1>
 <div class="two_column7 float_l"><h1 class="righttitle2">Single </h1>
               <h4 class="pricedes">A Single Lesson!</h3> 
 <h4 class="priceshow">Price: $100 (per person) <span class="includes">Includes:</span></h4> 
