ready for live testing

--- a/lessons.html
+++ b/lessons.html
@@ -57,11 +57,11 @@
     	
 <div class="two_column float_l">
                 <iframe id="pikevim" src="//player.vimeo.com/video/18696532" width="550" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <p id="video_summary"><span class="greenp">Whether you are looking to stand up for your first time or just looking to fine-tune your skills and become more well-rounded,</span> urabitur ullamcorper neque et justo aliquet at pretium orci  scelerisque. Mauris sodales tristique dignissim. Phasellus ut augue  nibh. Aliquam vel libero sit amet mauris posuere ullamcorper  sollicitudin ac eros. Vestibulum auctor euismod mi et tincidunt. </p>
+        <p id="video_summary"><span class="greenp">Whether you are looking to stand up for your first time or just looking to fine-tune your skills and become more well-rounded,</span> Pike Surf School of Santa Barbara is your best choice for fun, safe and affordable surf lessons!</p>
           </div>
     	
 <div id="righty">
-         <h1 class="marketing_header9">Surf Lessons</h1>
+         <h1 class="marketing_header9">About the Lessons</h1>
          <p class="topshow7"><span class="lightp">James Pike has been teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf ‘n Skate goal is to be an asset to the world, so that anyone who lives in town or is pasting thru, has a wonderful surfing experience.  This is a sport for ages ( 4-77+ ).  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting with an expert.  Give the gift of surfing to yourself and your whole family, so everyone is involved and having fun!  Set up a surfing lesson today and learn how to surf with Pike!</p>
 <h1 class="marketing_header2">What's Included?</h1>
 <p class="topshow7"><span class="lightp">Each private surfing lesson is 90 minutes and includes:</span> wetsuits, surfboards with surfing leash and 1 0n 1, personalized learning environment with surfing instructor James Pike.
