--- a/links.html
+++ b/links.html
@@ -51,7 +51,7 @@
 <div id="templatemo_content_wrapper">
 	<div id="templatemo_content7">
     	
-         <h1 class="contacttitle">Staying Nearby?&nbsp; Enjoy the Following!</h1>
+         <h1 class="contacttitle">Staying Nearby?&nbsp; Enjoy!</h1>
 			<div class="two_column float_l">
             
             	<h1 class="marketing_header101">Surf Report</h1>
