--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Why Choose Us? | Pike&#039;s Surf N&#039; Skate</title>
+<title>Why Choose Us? | Pike&#039;s Surf School</title>
 <meta name="keywords" content="Black Fox, Free CSS Template, full-site, 5 pages, HTML" />
 <meta name="description" content="As the Founder of Pike Surf School, I set out to create a safe & fun environment where anyone could learn how to surf" />
 <meta name="viewport" content="width=1351">
@@ -55,9 +55,9 @@
 	<div id="templatemo_content2"><div id="services_content">
 <div id="lefty">
          <h1 class="marketing_header6">About Us</h1>
-         <p class="topshow"><span class="lightp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn about surfing,</span> not just how to learn how to ride a wave or paddle (we teach that too :) but learn about what it truly means to be a surfer, from the ground up. I've given lessons to everyone from children, teens, and adults, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teen</p>
-<h1 class="marketing_header7">Meet The Instructor</h1>
-<p class="topshow"><span class="lightp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn about surfing,</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et nunc commodo ante   ornare imperdiet. Donec nunc neque, pulvinar a, vestibulum eget, luctus   id, orci. Pellentesque elementum enim a augue. Donec in nisi. Etiam sit   amet turpis. Duis nulla diam, posuere ac, varius id, ullamcorper sit   amet, libero. Nam sodales, pede vel dapibus lobortis, ipsum diam molestie risus, a vulputate risus nisl pulvinar lacus.</p>
+         <p class="topshow"><span class="lightp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn how to surf,</span> not just how to ride a wave or paddle (we teach that too :) but learn about what it truly means to be a surfer, from the ground up, like I did. Over the years, I've given lessons to everyone from children, teens, and adults, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teen</p>
+<h1 class="marketing_header7">Meet The Instructor</h1><div id="part4"></div>
+<p class="topshow"><span class="lightp"> James Benjamin Pike,  born on July 11th ,1985,</span>  at the Children’s Hospital in beautiful San Francisco, California.  When I came out of the womb, the doctor held me up by my feet,  looked me up and down, then handed me over to my Mother and said ” He’s going to be a skateboarder.” My Mother, in horror, covered my little ears and said ” Don’t said that!” .  The doctor reply, “Sorry, I’ve been doing this for a 40 years, I can just tell, Skater. ”   My parents were living in Fremont, California at the time, my  Mother was working at the Port of Oakland, as a Management Consultant, and it was easy for her to break away from work to cross over into San Francisco for doctor visits and eventually my birth.  My Dad was also a Management Consultant in Silicon Valley.   My Mom left her employment at the Port of Oakland and stayed home with me until the age of six-years old.  In 1992, she decided to return to her original profession:  University Associate Professor.</p>
 
 
 
