--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Lesson Prices | Pike&#039;s Surf N&#039; Skate</title>
-<meta name="keywords" content="Surf lesson prices, group rates, invividual lessons, surf instruction" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="keywords" content="Surf lesson prices, best group rates, invividual surf lessons, surf instruction santa barbara" />
 <meta name="description" content="Pike's Surf School is a fun, friendly, and safe place to learn how to surf from an experienced industry professional" />
 <meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
@@ -55,11 +56,11 @@
 	<div id="templatemo_content69">
 
 
-<h1 class="marketing_header22">Pricing/Packages:</h1>
+<h1 class="marketing_header22">Pricing / Info:</h1>
  <p id="test1"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span> 
 <div class="two_column7 float_l"><h1 class="righttitle2">Single </h1>
               <h4 class="pricedes">A Single Lesson!</h3> 
-<h4 class="priceshow">Price: $100 (per person) <span class="includes">Includes:</span></h4> 
+<h4 class="priceshow"><b>Price: $100 (per person)</b> <span class="includes">Includes:</span></h4> 
 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -72,7 +73,7 @@
  <div class="two_column8 float_l">
             <h1 class="righttitle3">Double</h1>
 <h4 class="pricedes">A Double Lesson! </h3>
-<h4 class="priceshow">Price: $160 ($80 per person) <span class="includes">Includes:</span></h3>
+<h4 class="priceshow"><b>Price: $160</b> ($80 per person) <span class="includes">Includes:</span></h3>
                 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -91,7 +92,7 @@
 <div class="two_column7 float_l">
             <h1 class="righttitle4">Three or more</h1>
 <h4 class="pricedes">A Group Lesson! </h3>
-<h4 class="priceshow">Price: $210 ($70 per person) <span class="includes">Includes:</span></h3>
+<h4 class="priceshow"><b>Price: $210</b> ($70 per person) <span class="includes">Includes:</span></h3>
                 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -105,7 +106,7 @@
 <div class="two_column8 float_l">
             <h1 class="righttitle4">Four or more</h1>
 <h4 class="pricedes">4 or more! </h3>
-<h4 class="priceshow">Price: $240 ($60 per person) <span class="includes">Includes:</span></h3>
+<h4 class="priceshow"><b>Price: $240 </b>($60 per person) <span class="includes">Includes:</span></h3>
                 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
