--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Why Choose Us? | Pike&#039;s Surf School</title>
-<meta name="keywords" content="Black Fox, Free CSS Template, full-site, 5 pages, HTML" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="keywords" content="Best Surf School in Santa Barbara" />
 <meta name="description" content="As the Founder of Pike Surf School, I set out to create a safe & fun environment where anyone could learn how to surf" />
 <meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
