--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Photo Gallery | Pike&#039;s Surf N&#039; Skate</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson photos, Kelly Slater, Bobby Martinez, Santa Barbara" />
 <meta name="description" content="These photos capture the stoked feeling our customers experience after a lesson. Enjoy. " />
 <meta name="viewport" content="width=1351">
@@ -60,7 +61,7 @@
 
 <div id="templatemo_content_wrapper"><img src="/images/cc.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content69">
- <h1 class="marketing_header9">Lesson Gallery :)</h1>
+ <h1 class="marketing_header9">Lesson Photos :)</h1>
 <div id="imagegroup">
 		<div class="popup-gallery">
 	
