--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>  Welcome | Pike&#039;s Surf School Santa Barbara</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="surf Santa Barbara, santa barbara best camp, best surfing vacations, Santa Barbara surf lessons, Santa Barbara surf resorts, surf lessons Santa Barbara, surf school santa barbara, santa barbara surfing" />
 <meta name="description" content="Give the gift of surfing to yourself and your whole family, in a fun, safe, and beautiful environment!" />
 <meta name="viewport" content="width=1351">
@@ -107,7 +108,7 @@
         </div>
 <div class="top_row_box last"><img src="/images/couples.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Enjoy</span> together in Groups!</h5>
-          <p><span class="bluep">Dive headfirst into a surf learning adventure with your closest friends.</span> Enjoy your first surf learning experience together with true locals who live in this beautiful town.  </p>
+          <p><span class="bluep">Dive headfirst into a group surfing adventure with a few of your closest friends.</span> Enjoy your first surf learning experience together in beautiful Santa Barbara.  </p>
             <div><a class="button" href="/about.html">Find Out More!</a></div>
 	  </div>
         </div>
@@ -150,18 +151,21 @@
 
 <a href="images/24.jpg" title="New and born again surfers"><img src="images/24.jpg" class="popyimg"></a>
 <a href="images/gettinready.jpg" title="Nothing but smiles- Getting ready!"><img src="images/gettinready.jpg" class="popyimg"></a>
-<a href="images/ks.jpg" title="Kelly Slater with a young surfing student"><img src="images/ks.jpg" class="popyimg"></a>
+<a href="images/ks.jpg" title="A young surfing student with Kelly Slater"><img src="images/ks.jpg" class="popyimg"></a>
     </div>
+ </div> <!-- end of footer -->
+</div> <!-- end of footer wrapper --> 
+<div id="ego_wrapper">
+
     	<div id="egospace"><div class="fb-like-box" data-href="https://www.facebook.com/pages/Pikes-Surf-N-Sk8/210572495666457" data-colorscheme="dark" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div><div id='yelpwidget'></div>
        </div>
-
+</div>
 
         <div class="cleaner"></div>
-    </div> <!-- end of footer -->
-</div> <!-- end of footer wrapper -->    
+      
 
 <div id="templatemo_copyright_wrapper">
-	<div id="templatemo_copyright">Copyright © 2014 <a href="#">&nbsp;Pike Surf School&nbsp;</a> Enjoy Life. Learn to Surf! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
+	<div id="templatemo_copyright">Copyright © 2014 <a href="#">&nbsp;Pike Surf School&nbsp;</a> Enjoy Life.<span class="bluep"> Learn to Surf!</span> <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
 
         
     </div> <!-- end of templatemo_copyright -->
