--- a/lessons.html
+++ b/lessons.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Lessons | Pike&#039;s Surf School</title>
+<title>Surf Lessons | Santa Barbara - California | Pike&#039;s Surf School </title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Santa Barbara Surfing, learn to surf" />
 <meta name="description" content="James Pike has been teaching surfing lessons for over 12 years and is both CPR and First Aid Certified." />
 <meta name="viewport" content="width=1351">
