--- a/links.html
+++ b/links.html
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title> Local Links | Pike&#039;s Surf N&#039; Skate</title>
-<meta name="keywords" content="Contact Pike Surf School, Pay Instructor" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
 <meta name="description" content="Set up a surfing lesson today and learn how to surf with Pike!" />
 <meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
