--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Why Choose Us? | Pike&#039;s Surf School</title>
+<title>Why Choose Us? | Pike&#039;s Surf School | Santa Barbara - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Best Surf School in Santa Barbara" />
 <meta name="description" content="As the Founder of Pike Surf School, I set out to create a safe & fun environment where anyone could learn how to surf" />
