--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Photo Gallery | Pike&#039;s Surf N&#039; Skate</title>
+<title>Photo Gallery | Pike&#039;s Surf School | Santa Barbara - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson photos, Kelly Slater, Bobby Martinez, Santa Barbara" />
 <meta name="description" content="These photos capture the stoked feeling our customers experience after a lesson. Enjoy. " />
@@ -27,7 +27,7 @@
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikelogs.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
@@ -59,7 +59,7 @@
 
 
 
-<div id="templatemo_content_wrapper"><img src="/images/cc.jpg" alt="logo"  id="about_background3"/>
+<div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content69">
  <h1 class="marketing_header9">Lesson Photos :)</h1>
 <div id="imagegroup">
@@ -125,7 +125,16 @@
  
 
 <div id="templatemo_copyright_wrapper">
-	<div id="templatemo_copyright">Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
+	<div id="templatemo_copyright">
+<ul id="sitemap">
+<li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
+<li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
+<li class="sitelinks"><a href="lessons.html" class="linkies">Lessons</a></li>
+<li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
+<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
+<li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
+</ul>
+Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
 
         
     </div> <!-- end of templatemo_copyright -->
