--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikelogs.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
@@ -52,7 +52,7 @@
 
 
 
-<div id="templatemo_content_wrapper"><img src="/images/cc.jpg" alt="logo"  id="about_background3"/>
+<div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content2"><div id="services_content">
 <div id="lefty">
          <h1 class="marketing_header6">About Us</h1>
@@ -92,7 +92,14 @@
 
 
 <div id="templatemo_copyright_wrapper">
-	<div id="templatemo_copyright">Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
+	<div id="templatemo_copyright"><ul id="sitemap">
+<li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
+<li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
+<li class="sitelinks"><a href="lessons.html" class="linkies">Lessons</a></li>
+<li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
+<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
+<li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
+</ul>Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
 
         
     </div> <!-- end of templatemo_copyright -->
