testing before live

--- a/gallery.html
+++ b/gallery.html
@@ -67,16 +67,16 @@
 	
 	<a href="images/neo1.jpg" title="Right after a great session!"><img src="images/neo1.jpg" class="popyimg"></a>
 
-	<a href="images/botp.jpg" title="Girls having a blast after surfing"><img src="images/botp.jpg" class="popyimg"></a>
+	<a href="images/botp.jpg" title="Girls can surf too!"><img src="images/botp.jpg" class="popyimg"></a>
 <a href="images/zen.jpg" title="A young surfing stud in the making!"><img src="images/zen.jpg" class="popyimg"></a>
 
 
 
 <a href="images/24.jpg" title="New and born again surfers"><img src="images/24.jpg" class="popyimg"></a>
-<a href="images/gettinready.jpg" title="Nothing but smiles- Getting ready!"><img src="images/gettinready.jpg" class="popyimg"></a>
-<a href="images/ks.jpg" title="Kelly Slater with a young surfing student"><img src="images/ks.jpg" class="popyimg"></a>
+<a href="images/gettinready.jpg" title="Nothing but smiles- Getting ready to paddle out!"><img src="images/gettinready.jpg" class="popyimg"></a>
+<a href="images/ks.jpg" title="A young surfing student with 11-time ASP World Champion Kelly Slater"><img src="images/ks.jpg" class="popyimg"></a>
 
-<a href="images/ps.jpg" title="Girls having a blast after surfing"><img src="images/ps.jpg" class="popyimg"></a>
+<a href="images/ps.jpg" title="An inspirational surfer and person"><img src="images/ps.jpg" class="popyimg"></a>
 
 
 
@@ -85,24 +85,24 @@
 
 
 
-<a href="images/botd.jpg" title="Girls having a blast after surfing"><img src="images/botd.jpg" class="popyimg"></a>
+<a href="images/botd.jpg" title="A successful first-time ride for the record books!"><img src="images/botd.jpg" class="popyimg"></a>
 
 
-<a href="images/neo2.jpg" title="Girls having a blast after surfing"><img src="images/neo2.jpg" class="popyimg"></a>
+<a href="images/neo2.jpg" title="An awesome group and an awesome experience"><img src="images/neo2.jpg" class="popyimg"></a>
 
-<a href="images/training.jpg" title="Girls having a blast after surfing"><img src="images/training.jpg" class="popyimg"></a>
-
-
+<a href="images/training.jpg" title="Breathing. Stretching. Preparing!"><img src="images/training.jpg" class="popyimg"></a>
 
 
-<a href="images/aut.jpg" title="Autism beach Day 2009, ever time I see this picture, it make me proud to have been apart of this event!"><img src="images/aut.jpg" class="popyimg"></a>
-
-<a href="images/great.jpg" title="Girls having a blast after surfing"><img src="images/great.jpg" class="popyimg"></a>
 
 
-<a href="images/lukas.jpg" title="A young surf student, Lukas learning fast!"><img src="images/lukas.jpg" class="popyimg"></a>
+<a href="images/aut.jpg" title="Autism beach Day 2009, so proud to have been apart of this event!"><img src="images/aut.jpg" class="popyimg"></a>
 
-<a href="images/dashboard.jpg" title="Girls having a blast after surfing"><img src="images/dashboard.jpg" class="popyimg"></a>
+<a href="images/great.jpg" title="Thumbs up for first-time riders!"><img src="images/great.jpg" class="popyimg"></a>
+
+
+<a href="images/lukas.jpg" title="A young surf student, Lukas learning VERY fast!"><img src="images/lukas.jpg" class="popyimg"></a>
+
+<a href="images/dashboard.jpg" title="There is nothing like the ocean to make you appreciate this life"><img src="images/dashboard.jpg" class="popyimg"></a>
 
 
 </div>
