--- a/lessons.html
+++ b/lessons.html
@@ -66,7 +66,7 @@
          <p class="topshow7"><span class="lightp">James Pike has been teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf ‘n Skate goal is to be an asset to the world, so that anyone who lives in town or is pasting thru, has a wonderful surfing experience.  This is a sport for ages ( 4-77+ ).  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting with an expert.  Give the gift of surfing to yourself and your whole family, so everyone is involved and having fun!  Set up a surfing lesson today and learn how to surf with Pike!</p>
 <h1 class="marketing_header2">What's Included?</h1>
 <p class="topshow7"><span class="lightp">Each private surfing lesson is 90 minutes and includes:</span> wetsuits, surfboards with surfing leash and 1 0n 1, personalized learning environment with surfing instructor James Pike.
-Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfschool.com).  Please include your full name and the height’s and weight’s for the people in the surf lesson, as well as a good time and date that works for you. Pike’s Surf School accepts for payment of Cash and Checks (Please write checks to “Pike’s Surf School”).</p>
+Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfschool.com).  Please include your full name and the height’s and weight’s for the people in the surf lesson, as well as a good time and date that works for you. Pike’s Surf School accepts for payment of Cash and Checks (Please make checks payable to “Pike’s Surf School”).</p>
 
 
     </div>
